List templates tabs map is now unmodifiable